--- a/interveiw/23y10m25d/규태.md
+++ b/interveiw/23y10m25d/규태.md
@@ -1,1 +1,9 @@
-.
+- css display, position의 차이와 주로 어떤거 사용하는지: position은 좌표를 지정해주는 형식, display는 상황에 따라 보여주는걸 다르게 해주는 형식, 주로 display를 선호한다. 왜냐하면 모바일과 탭 등 다양한 환경이 나와 그에 맞게 대응하기 위해서다. ->(주로 display flex사용)
+- 고화질 이미지와 동영상을 어떻게 처리할건지? : 이 부분은 성능 최적화와 관련 있다. 화면의 크기에 맞게 media query이용, picture태그 사용(media query와 같은 원리), img태그 lazy loding사용 
+- js의 object와 배열의 특징: 배열, object모두 주소를 복사한다. 그래서 <br/>
+``` javascript
+const a = {};
+const b = a;
+console.log(a===b);
+```
+console에는 true가 나온다. 
